0.1.3
-----
1. Fix virtual library handling.
2. Fix now playing info backdrop for mobile layout.
3. Change A..Z group sizes. For 500 or less items, size is 50. For 5000 or less,
   size is 100. For 10000 or less, size is 200. Otherwise size is 300
4. Add support for remote libraries.
5. Alter link text colour to improve legibility.

0.1.2
-----
 1. Use _50x50_o for list covers, and _300x300_f for grid covers.
 2. Add scaled image to slideshow list, and only fetch full sized image when
    slideshow active.
 3. Crop list images as per grid images.
 4. Add bitrate and file type to now playing.
 5. Only show year if >0
 6. Add tooltip to grid view items.
 7. Allow grid view text to span multiple lines.
 8. Reduce some font sizes.
 9. Show name of last loaded playlist in queue.
10. Fix listing of playlist tracks.
11. Move 'Manage Players' dialog to player menu.
12. If there are no players detected, then poll server ever second to detect
    players.
13. Smarter polling whilst playing. Only poll every second if in the first or
    last 6 seconds of a track.
14. Change clear queue icon to something (hopefully) more obvious.
15. Fix fetching more than 100 items in queue.
16. Click on song duration to toggle showing duration / time remaining.
17. For desktop layout, optionally show all 3 panes when showing track info.
18. Draw current cover behind track info.
19. Reduce grid cover sizes, and add 3rd size.
20. If splitting artists/albums in A..Z groups, and a letter has more than the
    'group size' then split into 'group size' chunks.

0.1.1
-----
 1. Only list players that are connected.
 2. Add 'Play album starting at track' item to track context menus. Only if
    parent is an album, and track is not 1st track.
 3. Respect genre/artist filtering when adding albums/artists to queue.
 4. Add a setting to specify application layout; auto, desktop, mobile.
 5. Add optional grid view for artists, albums, and SlimBrowse icon_list.
 6. Fix durations longer than 24hrs.